[gd_scene load_steps=13 format=2]

[ext_resource path="res://scn/prototype_files/MapAIPrototype.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Worlds/Survival_World.gd" type="Script" id=2]
[ext_resource path="res://scn/prototype_files/EnemySpawning_scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://scn/Char/WA_HAW.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/misc/void_bg.png" type="Texture" id=5]
[ext_resource path="res://scn/GUIs/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/misc/PartyConfettiRegular-eZOn3.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/prototype files/score.gd" type="Script" id=8]
[ext_resource path="res://scn/GUIs/EndScene.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/SFXs/BGM/music_zapsplat_aiming_high.wav" type="AudioStream" id=10]
[ext_resource path="res://scn/BGs/world_1.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 7 )

[node name="Test_World" type="Node2D"]
script = ExtResource( 2 )

[node name="main" parent="." instance=ExtResource( 11 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -208 )
__meta__ = {
"_edit_horizontal_guides_": [ -31.0 ],
"_edit_vertical_guides_": [ -5.0 ]
}

[node name="PlatformCharIdle" parent="Player" index="3"]
frame = 15

[node name="flash2" parent="Player/TestPlayerGun/B_Spawn_pos" index="1"]
frame = 2

[node name="flash" parent="Player/TestPlayerGun/B_Spawn_pos" index="2"]
frame = 6

[node name="bg" type="CanvasLayer" parent="."]
layer = -1
visible = false

[node name="bg" type="TextureRect" parent="bg"]
visible = false
self_modulate = Color( 0.352941, 1, 0.717647, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 5 )
expand = true

[node name="t_creater" parent="." instance=ExtResource( 1 )]

[node name="Positioner" type="Node2D" parent="."]
position = Vector2( 503, -889 )

[node name="EnemySpawning_scene" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]
layer = 10

[node name="PauseMenu" parent="GUI" instance=ExtResource( 6 )]

[node name="score" type="Label" parent="GUI"]
anchor_right = 1.0
margin_right = 320.0
margin_bottom = 81.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="EndScene" parent="GUI" instance=ExtResource( 9 )]
layer = 11

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
autoplay = true

[connection signal="create_block" from="." to="t_creater" method="_on_create_block"]
[connection signal="playerIsDead" from="Player" to="GUI/EndScene" method="_on_Player_playerIsDead"]
[connection signal="create_block" from="t_creater" to="." method="_on_t_creater_create_block"]
[connection signal="timeout" from="Timer" to="t_creater" method="_on_Timer_timeout"]
[connection signal="pressed" from="GUI/PauseMenu/control/continue" to="GUI/EndScene" method="_on_continue_pressed"]

[editable path="Player"]
[editable path="GUI/PauseMenu"]
